--- a/isaw-papers-20/isaw-papers-20.xhtml
+++ b/isaw-papers-20/isaw-papers-20.xhtml
@@ -56,7 +56,7 @@
  
  <p class="doi">URI: <a rel="dcterms:identifier" href="http://hdl.handle.net/2333.1/gqnk9kz2">http://hdl.handle.net/2333.1/gqnk9kz2</a></p>
  
- <p class="abstract"><em>Abstract: </em><span id="abstract" property="dcterms:abstract">This collection presents case studies written by principal investigators of, or contributors to, various digital projects related to the ancient Mediterranean world which use Linked Open Data (LOD) or are informed by its principles.  Some of the chapters are based on presentations given at the “Linking the Big Ancient Mediterranean” conference at the University of Iowa in summer 2016.  As a group, the contributions cover a wide variety of geographic regions and forms of evidence, and discuss data structures as they relate to a number of sub-disciplines within the study of the ancient world.</span></p>
+ <p class="abstract"><em>Abstract:</em> <span id="abstract" property="dcterms:abstract">This collection presents case studies written by principal investigators of, or contributors to, various digital projects related to the ancient Mediterranean world which use Linked Open Data (LOD) or are informed by its principles.  Some of the chapters are based on presentations given at the “Linking the Big Ancient Mediterranean” conference at the University of Iowa in summer 2016.  As a group, the contributions cover a wide variety of geographic regions and forms of evidence, and discuss data structures as they relate to a number of sub-disciplines within the study of the ancient world.</span></p>
  
 <p class="subjects"><em>Library of Congress Subjects:</em> <a rel="dcterms:subject" href="http://id.loc.gov/authorities/subjects/sh2010112582">Semantic Web--Congresses</a>; <a rel="dcterms:subject" href="http://id.loc.gov/authorities/subjects/sh2013002090">Linked data--Congresses</a>.</p>
  
@@ -66,31 +66,31 @@
  <h2>Table of Contents</h2>
  <ol>
   <li>Sarah E. Bond, Paul Dilley, and Ryan Horne - <a href="http://hdl.handle.net/2333.1/c2fqzh3d"><i>Introducing the Semantic Web and Linked Open Data</i></a></li>
-  <br/>
-  <li>Ryan Horne - <a href="http://hdl.handle.net/2333.1/79cnpgk2"><i>Applying Linked Open Data Standards</i></a></li>
-  <br/>
-  <li>Adam Rabinowitz - <a href="http://hdl.handle.net/2333.1/3j9kdg35"><i>Time for Linked Open Data</i></a></li>
-  <br/>
-  <li>Gabriel Bodard - <a href="http://hdl.handle.net/2333.1/zs7h4fs8"><i>Linked Open Data for Ancient Names and People</i></a></li>
-  <br/>
-  <li>Hannah Scates Kettler - <a href="http://hdl.handle.net/2333.1/v15dvf81"><i>Linked Open Data for 3D Models and Environments</i></a></li>
-  <br/>
-  <li>Ethan Gruber and Andrew Meadows - <a href="http://hdl.handle.net/2333.1/q83bkdqf"><i>Numismatics and Linked Open Data</i></a></li>
-  <br/>
-  <li>Pietro Maria Liuzzo - <a href="http://hdl.handle.net/2333.1/kh189d69"><i>Linked Open Data Based on </i>La Syntaxe du Codex<i> for Manuscripts in Beta maṣāḥǝft</i></a></li>
-  <br/>
-  <li>Thomas Koentges, Christopher Blackwell, Gregory Crane, Neel Smith, and James Tauber - <a href="http://hdl.handle.net/2333.1/fttdz9dt"><i>The CITE Architecture: Q &amp; A Regarding CTS and CITE</i></a></li>
-  <br/>
-  <li>Alison Babeu and Paul Dilley - <a href="http://hdl.handle.net/2333.1/b2rbp8wh"><i>Linked Open Data for Greek and Latin Authors and Works</i></a></li>
-  <br/>
-  <li>David Michelson - <a href="http://hdl.handle.net/2333.1/69p8d8cc"><i>Using Linked Open Data to Model Cultural Heritage Information: The Research Questions and Data Structures of the Syriaca.org Knowledge Graph</i></a></li>
-  <br/>
-  <li>Ryan Baumann - <a href="http://hdl.handle.net/2333.1/2jm647v1"><i>Linked Open Data for Papyrology</i></a></li>
-  <br/>
-  <li>Anne Hunnell Chen and Jamie Folsom - <a href="http://hdl.handle.net/2333.1/xsj3v7j6"><i>Origins and Antidotes of Omission: Southeastern European Archaeology, Linked Open Data, and the Possibilities for Archaeological Integration</i></a></li>
-  <br/>
-  <li>Sebastian Heath - <a href="http://hdl.handle.net/2333.1/t1g1k70v"><i>Applied Use of JSON, GeoJSON, JSON-LD, SPARQL, and IPython Notebooks for Representing and Interacting with Small Datasets</i></a></li>
-  <br/>
+
+  <li style="padding-top: .4em">Ryan Horne - <a href="http://hdl.handle.net/2333.1/79cnpgk2"><i>Applying Linked Open Data Standards</i></a></li>
+
+  <li style="padding-top: .4em">Adam Rabinowitz - <a href="http://hdl.handle.net/2333.1/3j9kdg35"><i>Time for Linked Open Data</i></a></li>
+
+  <li style="padding-top: .4em">Gabriel Bodard - <a href="http://hdl.handle.net/2333.1/zs7h4fs8"><i>Linked Open Data for Ancient Names and People</i></a></li>
+
+  <li style="padding-top: .4em">Hannah Scates Kettler - <a href="http://hdl.handle.net/2333.1/v15dvf81"><i>Linked Open Data for 3D Models and Environments</i></a></li>
+
+  <li style="padding-top: .4em">Ethan Gruber and Andrew Meadows - <a href="http://hdl.handle.net/2333.1/q83bkdqf"><i>Numismatics and Linked Open Data</i></a></li>
+
+  <li style="padding-top: .4em">Pietro Maria Liuzzo - <a href="http://hdl.handle.net/2333.1/kh189d69"><i>Linked Open Data Based on </i>La Syntaxe du Codex<i> for Manuscripts in Beta maṣāḥǝft</i></a></li>
+
+  <li style="padding-top: .4em">Thomas Koentges, Christopher Blackwell, Gregory Crane, Neel Smith, and James Tauber - <a href="http://hdl.handle.net/2333.1/fttdz9dt"><i>The CITE Architecture: Q &amp; A Regarding CTS and CITE</i></a></li>
+
+  <li style="padding-top: .4em">Alison Babeu and Paul Dilley - <a href="http://hdl.handle.net/2333.1/b2rbp8wh"><i>Linked Open Data for Greek and Latin Authors and Works</i></a></li>
+
+  <li style="padding-top: .4em">David Michelson - <a href="http://hdl.handle.net/2333.1/69p8d8cc"><i>Using Linked Open Data to Model Cultural Heritage Information: The Research Questions and Data Structures of the Syriaca.org Knowledge Graph</i></a></li>
+
+  <li style="padding-top: .4em">Ryan Baumann - <a href="http://hdl.handle.net/2333.1/2jm647v1"><i>Linked Open Data for Papyrology</i></a></li>
+
+  <li style="padding-top: .4em">Anne Hunnell Chen and Jamie Folsom - <a href="http://hdl.handle.net/2333.1/xsj3v7j6"><i>Origins and Antidotes of Omission: Southeastern European Archaeology, Linked Open Data, and the Possibilities for Archaeological Integration</i></a></li>
+
+  <li style="padding-top: .4em">Sebastian Heath - <a href="http://hdl.handle.net/2333.1/t1g1k70v"><i>Applied Use of JSON, GeoJSON, JSON-LD, SPARQL, and IPython Notebooks for Representing and Interacting with Small Datasets</i></a></li>
+
  </ol>
  </div>
  
