--- a/isaw-papers-21/isaw-papers-21.xhtml
+++ b/isaw-papers-21/isaw-papers-21.xhtml
@@ -13,19 +13,19 @@
  skos: http://www.w3.org/2004/02/skos/core#
  ">
  <head>
- 
+
  <title>Integration of Photogrammetry, Reflectance Transformation Imaging (RTI), and Multiband Imaging (MBI) for Visualization, Documentation, and Analysis of Archaeological and Related Materials</title>
-  
+
  <link rel="schema.DC" href="http://purl.org/dc/elements/1.1/" />
  <link rel="schema.DCTERMS" href="http://purl.org/dc/terms/" />
- 
- <meta name="DC.title" content="Integration of Photogrammetry, Reflectance Transformation Imaging (RTI), and Multiband Imaging (MBI) for Visualization, Documentation, and Analysis of Archaeological and Related Materials" /> 
+
+ <meta name="DC.title" content="Integration of Photogrammetry, Reflectance Transformation Imaging (RTI), and Multiband Imaging (MBI) for Visualization, Documentation, and Analysis of Archaeological and Related Materials" />
  <meta name="DC.date" content="2021" />
  <meta name="DC.format" content="application/xhtml+xml" />
- <meta name="DC.creator" content="Emily Frank" /> 
- <meta name="DC.creator" content="Sebastian Heath" /> 
- <meta name="DC.creator" content="Chantal Stein" /> 
- <meta name="DC.language" content="en" /> 
+ <meta name="DC.creator" content="Emily Frank" />
+ <meta name="DC.creator" content="Sebastian Heath" />
+ <meta name="DC.creator" content="Chantal Stein" />
+ <meta name="DC.language" content="en" />
  <meta name="DC.abstract" content="This paper describes a practical workflow that enables the integration of Photogrammetry-based 3D modeling, Reflectance Transformation Imaging (RTI), and Multiband Imaging (MBI) into a single representation that can, in turn, be rendered visually using existing open-source software. To illustrate the workflow, we apply it to a fragment of an Egyptian painted wood sarcophagus now in the Institute of Fine Arts Study (NYU) Collection and then show how the results can contribute to the visualization, documentation, and analysis of archaeological and related materials. One product of this work is an animation rendered using the open-source software Blender. The animation emphasizes aspects of surface variation and reveals the craftwork involved in producing the sarcophagus fragment. In doing so, it highlights that the workflow we describe can serve many purposes and contribute to a wide variety of research agendas." />
  <meta name="DC.subject" content="Imaging System in Archaeology" />
  <meta name="DC.subject" content="Multispectral imaging" />
@@ -34,7 +34,6 @@
  <meta name="DCTERMS.bibliographicCitation" content="Emily Frank, Sebastian Heath, and Chantal Stein. 2021. “Integration of Photogrammetry, Reflectance Transformation Imaging (RTI), and Multiband Imaging (MBI) for Visualization, Documentation, and Analysis of Archaeological and Related Materials” ISAW Papers 21. http://hdl.handle.net/2333.1/0cfxq0c3" />
  <meta name="DCTERMS.isPartOf" content="ISAW Papers" />
  <meta name="DCTERMS.identifier.URI" content="http://hdl.handle.net/2333.1/0cfxq0c3"/>
-     
  <link rel="dcterms:isPartOf" href="http://www.worldcat.org/oclc/756047783" />
  <link rel="dcterms:isPartOf" href="urn:issn:2164-1471" />
  <link rel="dcterms:isPartOf" href="http://isaw.nyu.edu/publications/isaw-papers" />
@@ -48,14 +47,14 @@
 <header>
 
 <h2>ISAW Papers 21 (2021)</h2>
- 
+
 <h1 rel="dcterms:title">Integration of Photogrammetry, Reflectance Transformation Imaging (RTI), and Multiband Imaging (MBI) for Visualization, Documentation, and Analysis of Archaeological and Related Materials</h1>
-  
+
 <h2><span rel="dcterms:creator"><a rel="dcterms:identifier" href="https://orcid.org/0000-0003-1705-880X" property="foaf:name">Emily Frank</a></span>, <span rel="dcterms:creator"><a rel="dcterms:identifier" href="https://orcid.org/0000-0003-2039-429X" property="foaf:name">Sebastian Heath</a></span>, and <span rel="dcterms:creator"><a rel="dcterms:identifier" href="https://orcid.org/0000-0002-1091-4039" property="foaf:name">Chantal Stein</a></span></h2>
- 
+
 <p class="doi">URI: <a rel="dcterms:identifier" href="http://hdl.handle.net/2333.1/0cfxq0c3">http://hdl.handle.net/2333.1/0cfxq0c3</a></p>
- 
-<p class="abstract"><em>Abstract: </em><span id="abstract" property="dcterms:abstract">This paper describes a practical workflow that enables the integration of Photogrammetry-based 3D modeling, Reflectance Transformation Imaging (RTI), and Multiband Imaging (MBI) into a single representation that can, in turn, be rendered visually using existing open-source software. To illustrate the workflow, we apply it to a fragment of an Egyptian painted wood sarcophagus now in the Institute of Fine Arts Study (NYU) Collection and then show how the results can contribute to the visualization, documentation, and analysis of archaeological and related materials. One product of this work is an animation rendered using the open-source software Blender. The animation emphasizes aspects of surface variation and reveals the craftwork involved in producing the sarcophagus fragment. In doing so, it highlights that the workflow we describe can serve many purposes and contribute to a wide variety of research agendas.</span></p>
+
+<p class="abstract"><em>Abstract:</em> <span id="abstract" property="dcterms:abstract">This paper describes a practical workflow that enables the integration of Photogrammetry-based 3D modeling, Reflectance Transformation Imaging (RTI), and Multiband Imaging (MBI) into a single representation that can, in turn, be rendered visually using existing open-source software. To illustrate the workflow, we apply it to a fragment of an Egyptian painted wood sarcophagus now in the Institute of Fine Arts Study (NYU) Collection and then show how the results can contribute to the visualization, documentation, and analysis of archaeological and related materials. One product of this work is an animation rendered using the open-source software Blender. The animation emphasizes aspects of surface variation and reveals the craftwork involved in producing the sarcophagus fragment. In doing so, it highlights that the workflow we describe can serve many purposes and contribute to a wide variety of research agendas.</span></p>
 
 <p class="subjects"><em>Library of Congress Subjects:</em> <a rel="dcterms:subject" href="http://id.loc.gov/authorities/subjects/sh89002313">Imaging systems in archaeology</a>; <a rel="dcterms:subject" href="http://id.loc.gov/authorities/subjects/sh85088388">Multispectral imaging</a> ; <a href="http://id.loc.gov/authorities/subjects/sh2001000478">Three-dimensional imaging</a>.</p>
 
@@ -67,8 +66,10 @@
 <p id="p1" class="textindent0">This paper describes a practical workflow that enables the integration of photogrammetry-based 3D modeling, Reflectance Transformation Imaging (RTI), and Multiband Imaging (MBI)  into a single representation that can, in turn, be rendered visually using open-source software. To illustrate the workflow, we apply it to a fragment of an Egyptian painted wood sarcophagus depicting the winged goddess Isis that is now in the Institute of Fine Arts (New York University) Study Collection (Figure 1A).<sup><a class="footnote-reference" id="footnote-reference-1" href="#footnote-1">1</a></sup> Our intent is to show that this workflow can contribute to the visualization, documentation, and analysis of a broad range of visual and material culture, though our focus in developing the workflow has been art historical and archaeological practice and research. The object used as an example here is from a museum collection, though its state of preservation, with broken edges and only partially extant original surfaces, is analogous to that of objects found in the field during archaeological fieldwork. The flexibility of the process we present is most readily seen in an animation that is embedded in the body of this article (Figure 1B and Figure 2) and that highlights particular aspects of the wooden sarcophagus fragment. Watching that animation will give readers a sense of what the workflow can accomplish. However, we believe that the steps we describe are suitable for use with a wide variety of material culture and artworks and that they are adaptable to many research agendas. One indication of the potential for application in varied contexts is that other projects are working to overlay various types of complementary imagery on photogrammetric models.<sup><a class="footnote-reference" id="footnote-reference-2" href="#footnote-2">2</a></sup> It is likely, therefore, that this is an area of practice that will develop quickly. The workflow described here contributes to this collective progress by integrating multiple forms of imagery on a single 3D model and by using <i>Blender</i> as the tool that brings all the imagery into a single environment for both detailed rendering as single images and animated display.</p>
 
 <table style="width:95%">
+<colgroup>
 <col style="width:40%" />
 <col style="width:60%" />
+</colgroup>
 <tr>
 <td>
 <figure id="figure01a">
@@ -394,7 +395,7 @@ Your browser does not support the video tag.
 
 <p id="reference-19" class="work-cited" rel="dcterms:references" typeof="dcterms:BibliographicResource"><span property="dcterms:bibliographicCitation">Hermon, S., Pilides, D., Iannone, G., Georgiou, R., Amico, N., and Ronzino, P. (2012). Ancient Vase 3D Reconstruction and 3D Visualization. In M. Zhou, I. Romanowska, Z. Wu, P. Xu and P. Verhagen (Eds.), <i>Revive the Past. Computer Applications and Quantitative Methods in Archaeology (CAA). Proceedings of the 39th International Conference, Beijing, April 12-16</i> (59-64). Amsterdam: Pallas Publications.</span></p>
 
-<p id="reference-20" class="work-cited" rel="dcterms:references" typeof="dcterms:BibliographicResource"><span property="dcterms:bibliographicCitation">Kent, B. (2015). <i>3D Scientific Visualization with Blender</i>. San Rafael: Morgan and Claypool.</span></p> 
+<p id="reference-20" class="work-cited" rel="dcterms:references" typeof="dcterms:BibliographicResource"><span property="dcterms:bibliographicCitation">Kent, B. (2015). <i>3D Scientific Visualization with Blender</i>. San Rafael: Morgan and Claypool.</span></p>
 
 <p id="reference-21" class="work-cited" rel="dcterms:references" typeof="dcterms:BibliographicResource"><span property="dcterms:bibliographicCitation">Malzbender, T., Gelb, D., and Wolters, H. (2001). Polynomial Texture Maps. In <i>Proceedings of the 28th Annual Conference on Computer Graphics and Interactive Techniques</i> (519–28). New York: ACM Press. &lt;<a href="http://dl.acm.org/citation.cfm?id=383320" class="Standard">http://dl.acm.org/citation.cfm?id=383320</a>&gt;.</span></p>
 
