--- a/isaw-papers-1/isaw-papers-1.xhtml
+++ b/isaw-papers-1/isaw-papers-1.xhtml
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
+<!-- disable the following https://html-validate.org rules -->
+<!-- [html-validate-disable  void-style, no-inline-style, long-title] -->
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en"
  xml:lang="en"
  
  prefix="
@@ -43,9 +45,9 @@
  
   <meta name="DCTERMS.identifier.DOI" content="2333.1/k98sf96r"/>
 
- <link rel="dcterms:isPartOf" href="http://www.worldcat.org/oclc/756047783" />
+ <link rel="dcterms:isPartOf" href="https://www.worldcat.org/oclc/756047783" />
  <link rel="dcterms:isPartOf" href="urn:issn:2164-1471" />
- <link rel="dcterms:isPartOf" href="http://isaw.nyu.edu/publications/isaw-papers" />
+ <link rel="dcterms:isPartOf" href="https://isaw.nyu.edu/publications/isaw-papers" />
 
 
  <link rel="stylesheet" href="isaw-publications.css" />
@@ -99,13 +101,13 @@
   href="#endnote1" id="endnoteref1" ><sup>1</sup></a>
   and <span property="dcterms:creator cc:attributionName">John M. Steele</span><a class="endnotereference" href="#endnote2" id="endnoteref2" ><sup>2</sup></a>
  </h2>
- 
- <p class="doi" style="text-align: center;padding: 10px"><a rel="dcterms:identifier" href="http://doi.org/2333.1/k98sf96r">http://doi.org/2333.1/k98sf96r</a></p>
- 
+
+ <p class="doi" style="text-align: center;padding: 10px"><a rel="dcterms:identifier" href="https://hdl.handle.net/2333.1/k98sf96r">https://hdl.handle.net/2333.1/k98sf96r</a></p>
+
  <p class="abstract"><em>Abstract:</em> <span id="abstract" property="dcterms:abstract">Two cuneiform astrological tablets in the British Museum provide the first evidence for Babylonian knowledge of the so-called &quot;doctrine of the Terms&quot; of Greco-Roman astrology (BM 36326 and BM 36628+36817+37197). Greek, Latin, and Egyptian astrological sources for the various systems of Terms and their origin are reviewed, followed by preliminary editions and translations of the relevant sections of the tablets. The system of Terms is shown to be so far the most technically complex component of Greek astrology to originate in Babylonia. Over the course of the Hellenistic period an Egyptian origin was ascribed to the systems of Terms as it was combined with components of Greek horoscopic astrology. By Ptolemy's day, this spurious history had largely displaced the true.</span></p>
- 
- <div id="subjects"><em>Subjects:</em> <a class="subject" rel="dcterms:subject" href="http://id.loc.gov/authorities/subjects/sh85009015" property="dcterms:subject">Astronomy, Assyro-Babylonian</a>, <a class="subject" rel="dcterms:subject" href="http://id.loc.gov/authorities/subjects/sh85009017" property="dcterms:subject">Astronomy, Egyptian</a>, <a class="subject" rel="dcterms:subject" href="http://id.loc.gov/authorities/subjects/sh87000068" property="dcterms:subject">Astronomy, Greek</a>.</div>
- 
+
+ <div id="subjects"><em>Subjects:</em> <a class="subject" rel="dcterms:subject" href="https://id.loc.gov/authorities/subjects/sh85009015" property="dcterms:subject">Astronomy, Assyro-Babylonian</a>, <a class="subject" rel="dcterms:subject" href="https://id.loc.gov/authorities/subjects/sh85009017" property="dcterms:subject">Astronomy, Egyptian</a>, <a class="subject" rel="dcterms:subject" href="https://id.loc.gov/authorities/subjects/sh87000068" property="dcterms:subject">Astronomy, Greek</a>.</div>
+
 <div id="tableofcontents" class="noprint">
  <ol>
   <li><a href="#section1">The Terms in Greco-Roman and Egyptian astrology</a></li>
@@ -115,9 +117,9 @@
   <li><a href="#works_cited">Works Cited</a></li>
  </ol>
 </div>
- 
+
 </header>
- 
+
  <div id="body">
 <div class="section" id="section0">
  <p id="p1" rel="dcterms:hasPart" resource="#p1" class="textindent0">Two recently identified cuneiform astrological tablets in the British Museum provide the first evidence for Babylonian knowledge of the so-called &quot;doctrine of the Terms&quot; of Greco-Roman astrology, which ascribed to the planets a special influence over fixed sections of each of the twelve zodiacal signs.<a class="endnotereference" href="#endnote3" id="endnoteref3" ><sup>3</sup></a> <span class="reference" rel="dcterms:references" typeof="dcmitype:PhysicalObject"><a rel="rdfs:isDefinedBy" href="http://collection.britishmuseum.org/id/object/WCT63181" property="rdfs:label">BM 36326</a></span> and <span class="reference" rel="dcterms:references" typeof="dcmitype:PhysicalObject"><a rel="rdfs:isDefinedBy" href="http://collection.britishmuseum.org/id/object/WCT137352" property="rdfs:label">BM 36628+36817+37197</a></span> preserve parts of what appears to have been an astrological compendium containing material on calendrical and zodiacal astrology, stellar astrology, and constellations and city names. Although detailed provenance information has been lost, the two tablets are almost certainly from <span class="reference" rel="dcterms:references" typeof="dcterms:Location"><a rel="rdfs:isDefinedBy" href="https://pleiades.stoa.org/places/893951" property="rdfs:label">Babylon</a></span> and may well have been written by the same scribe. Unfortunately, the date of composition of the tablets is not known. The presence of the zodiac indicates that they must date to after the development of the zodiac in the late fifth century B.C.,<a class="endnotereference" href="#endnote4" id="endnoteref4"><sup>4</sup></a> and the scribe’s use of the &quot;old&quot; form of the number 9 (written with nine vertical wedges stacked in three rows of three) alongside the later cursive form (written with three winkelhaken placed in a diagonal line) is suggestive of a date in the fifth or fourth century B.C., but a later date cannot be ruled out.</p>
