--- a/isaw-papers-29-8/isaw-papers-29-8.xhtml
+++ b/isaw-papers-29-8/isaw-papers-29-8.xhtml
@@ -54,7 +54,7 @@ skos: http://www.w3.org/2004/02/skos/core#
 
 <div style="text-align:center" class="permanent_url">Permanent URL: <a rel="dcterms:identifier" href="https://hdl.handle.net/2333.1/">https://hdl.handle.net/2333.1/TK</a></div>
 
-<div class="textindent0 margintop15em" style="text-align:center">In: Paul Dilley and Katherine Tachau, eds. 2025. <a href="https://hdl.handle.net/2333.1/cc2frb95"><i>The Manuscript across Pre-modern Eurasia: Papers Relating to a Mellon-Sawyer Seminar at the University of Iowa</i></a>. ISAW Papers 29.</div>
+<div class="textindent0 margintop15em" style="text-align:center">In: Paul Dilley and Katherine Tachau, eds. 2025. <a href="https://hdl.handle.net/2333.1/cc2frb95"><i>The Manuscript across Pre-modern Afro-Eurasia: Papers Relating to a Mellon-Sawyer Seminar at the University of Iowa</i></a>. ISAW Papers 29.</div>
 
 <div style="text-align:center" class="permanent_url">Permanent URL: <a rel="dcterms:identifier" href="https://hdl.handle.net/2333.1/3tx9697c">https://hdl.handle.net/2333.1/3tx9697c</a></div>
 
@@ -299,7 +299,7 @@ skos: http://www.w3.org/2004/02/skos/core#
 
 <figure id="fig01">
 <img src="images/fig01.png" style="max-height:35em" />
-<figcaption>Fig. 1: Edessa Codex, British Library Add. 12150, fol. 156r © British Library Board</figcaption>
+<figcaption>Fig. 1. Edessa Codex, British Library Add. 12150, fol. 156r © British Library Board</figcaption>
 </figure>
 
 <p id="p33">The use of the <i>title + explicit</i> strategy continues to appear in Syriac manuscripts from the fifth century onwards, but little mention is made of it in works of Syriac codicology.<sup><a id="footnote-reference-69" class="footnote-reference" href="#footnote-69">69</a></sup> It is not entirely standardized, though; for example Add. 14425, a copy of the Peshitta with a colophon dated 463/4 <span style="font-variant: small-caps">ce</span>, uses only an <i>explicit</i> with seemingly no title preceding individual texts.<sup><a id="footnote-reference-70" class="footnote-reference" href="#footnote-70">70</a></sup></p>
@@ -347,7 +347,7 @@ skos: http://www.w3.org/2004/02/skos/core#
 
 <figure id="figure02">
 <img src="images/fig02.png" style="max-height:35em" />
-<figcaption>Fig. 2: Homilies, page 7, Chester Beatty Library PMA 2.7–8 © The Trustees of the Chester Beatty Library</figcaption>
+<figcaption>Fig. 2. Homilies, page 7, Chester Beatty Library PMA 2.7–8 © The Trustees of the Chester Beatty Library</figcaption>
 </figure>
 
 <p id="p35">This is an exact parallel with the Syriac examples just discussed. As the <i>title + explicit</i> strategy is uncommon in Coptic manuscripts in general, and only attested in this way in a Manichaean text, which likely has a Syriac ancestor, even if through a Greek intermediary, it is reasonable to postulate that the strategy was carried over from Syriac book formatting by Manichaeans for the preparation of some of their Coptic (and probably also Greek) books. However, it must be noted that text-division strategies in the Medinet Madi codices vary: for example, the <i>Epistles</i> codex uses a <i>superscriptio</i> (sometimes with a simple ϩ ‘amen’ as <i>subscriptio</i>), while the <i>Kephalaia</i> codices have only <i>superscriptiones</i> (including chapter numbers), though the latter are related to internal text divisions.</p>
@@ -396,7 +396,7 @@ skos: http://www.w3.org/2004/02/skos/core#
 
 <figure id="figure03" >
 <img src="images/fig03.png" style="max-height:35em"/>
-<figcaption>Fig. 3: Codex Bobbiensis, Turin BNU, ms. G.VII.15, fol. 41v (Reproduced by permission of the Italian Ministry of Culture, National University Library of Turin.)</figcaption>
+<figcaption>Fig. 3. Codex Bobbiensis, Turin BNU, ms. G.VII.15, fol. 41v (Reproduced by permission of the Italian Ministry of Culture, National University Library of Turin.)</figcaption>
 </figure>
 
 <p id="p40">Of roughly similar date to Codex Bobbiensis is the Greek/Latin bilingual Codex Bezae. It uses the <i>incipit + explicit</i> strategy for the Latin text of the right-hand pages, but also, and uniquely among Greek manuscripts of this period, for the facing Greek text of the left-hand pages (Fig. 4).</p>
@@ -511,7 +511,7 @@ skos: http://www.w3.org/2004/02/skos/core#
 
 <figure id="figure05">
 <img src="images/fig05.png" style="max-height: 35em" />
-<figcaption>Fig. 5 M4b with multiple <i>incipit</i>s/<i>explicits</i> in red ink visible on the right-hand page. Depositum der Berlin-Brandenburgischen Akademie der Wissenschaften in der Staatsbibliothek zu Berlin – Preußischer Kulturbesitz, Orientabteilung</figcaption>
+<figcaption>Fig. 5. M4b with multiple <i>incipit</i>s/<i>explicits</i> in red ink visible on the right-hand page. Depositum der Berlin-Brandenburgischen Akademie der Wissenschaften in der Staatsbibliothek zu Berlin – Preußischer Kulturbesitz, Orientabteilung</figcaption>
 </figure>
 
 <p id="p44">The use of this strategy in an Iranian-language manuscript tradition seems to be uniquely Manichaean, as neither <i>incipit</i>s nor <i>explicit</i>s are attested in any other Iranian-language manuscript tradition: non-Manichaean texts in Avestan, Middle Persian, Sogdian, or New Persian, regardless of the religious background, contain no <i>incipit</i>s or <i>explicit</i>s at all.<sup><a id="footnote-reference-" class="footnote-reference" href="#footnote-84">84</a></sup> Even the Christian texts in Syriac and Sogdian recovered from Turfan, which are comparatively better preserved, have no extant <i>incipit</i>s or <i>explicit</i>s anywhere — though even if they did, we would expect them to align rather with the more western Syriac <i>title + explicit</i> strategy.<sup><a id="footnote-reference-85" class="footnote-reference" href="#footnote-85">85</a></sup> This suggests it is neither a local codicological feature adopted by Manichaeans in Central Asia, nor one which they inherited via an Iranian-language manuscript tradition. Rather, the Manichaeans must have brought it from somewhere else. This is also suggested by the word order: while the default position of the verb in the three Iranian languages is at the end of the phrase, the <i>incipit</i>s and <i>explicit</i>s as a rule have the verb first, which corresponds with the usual ordering in their Latin use, as well as in Syriac and Coptic. Here again it seems unlikely that the correspondence between the Latin Christian and the Iranian Manichaean text-division strategy is completely fortuitous. We therefore also propose that the<i> incipit</i> + <i>explicit</i> strategy of the Iranian Manichaean manuscripts was carried over by the Manichaeans from an eastern Mediterranean or Near Eastern context in which the same Latin-derived paratextual strategy was circulating.</p>
@@ -582,12 +582,12 @@ skos: http://www.w3.org/2004/02/skos/core#
 
 <figure id="figure06">
 <img src="images/fig06.png" style="max-height: 35em" />
-<figcaption>Fig. 6 Cologne Mani Codex (P. Köln. 4780), montage of non-facing pages 62 (L) and 51 (R) to show how the running header would have looked on facing pages. The header reads περὶ τῆς γέννης | τοῦ σώματος αὐτοῦ ‘On the Origin | of His Body’.</figcaption>
+<figcaption>Fig. 6. Cologne Mani Codex (P. Köln. 4780), montage of non-facing pages 62 (L) and 51 (R) to show how the running header would have looked on facing pages. The header reads περὶ τῆς γέννης | τοῦ σώματος αὐτοῦ ‘On the Origin | of His Body’.</figcaption>
 </figure>
 
 <figure id="figure07">
 <img src="images/fig07.png" style="max-height: 35em" />
-<figcaption>Fig. 7 Dublin Kephalaia, montage of pages 310 (L) and 309 (R) (Chester Beatty PMA 1.309-310), a verso and recto of a single page displayed side-by-side to show how a complete running header would have looked on facing pages. © The Trustees of the Chester Beatty Library. The header reads []  | ϫ  'The Kephalaia of the Wisdom | of My Lord Mannichaios'.</figcaption>
+<figcaption>Fig. 7. Dublin Kephalaia, montage of pages 310 (L) and 309 (R) (Chester Beatty PMA 1.309-310), a verso and recto of a single page displayed side-by-side to show how a complete running header would have looked on facing pages. © The Trustees of the Chester Beatty Library. The header reads []  | ϫ  'The Kephalaia of the Wisdom | of My Lord Mannichaios'.</figcaption>
 </figure>
 
 <p id="p50">Running headers on facing pages are typical of the Manichaean manuscripts from Turfan as well. Indeed, virtually every codex page where the top part is preserved has a header. However, since no complete codex is preserved, it is difficult to make a general statement about how headers functioned over the entirety of a codex. It is nevertheless clear that a majority of preserved cases contain running headers on facing pages. The following are illustrative examples, selected from numerous attestations (running headers of non-consecutive pages are also visible in Fig. 4):</p>
@@ -626,7 +626,7 @@ skos: http://www.w3.org/2004/02/skos/core#
 
 <figure id="figure08">
 <img src="images/fig08.png" style="max-height: 35em" />
-<figcaption>Fig. 8 A Manichaean confession manual for the Elect (M801a / MIK III 53, known as BBB, p. 28–29) showing the running header in Middle Persian <i>mhrʾn ʿyg | šʾdyhʾn</i> ‘Hymns of | joy’ with red hymn captions in the body text. © Staatliche Museen zu Berlin, Museum für Asiatische Kunst / Lina Wällstedt</figcaption>
+<figcaption>Fig. 8. A Manichaean confession manual for the Elect (M801a / MIK III 53, known as BBB, p. 28–29) showing the running header in Middle Persian <i>mhrʾn ʿyg | šʾdyhʾn</i> ‘Hymns of | joy’ with red hymn captions in the body text. © Staatliche Museen zu Berlin, Museum für Asiatische Kunst / Lina Wällstedt</figcaption>
 </figure>
 
 <p id="p52">The evidence presented in this section allows for two conclusions. First, the Eastern and Western Manichaean manuscript traditions agree closely in the presence and function of running headers in codices. Second, the Manichaean tradition overall groups closely with the Latin Christian tradition, where running headers are the norm; the single-page headers of the Coptic <i>Psalmbook</i> parallel the Syriac Christian, where single-page headers are not uncommon. In two comparison groups, the non-Manichaean Greek and Coptic, running headers are not the norm; moreover, in the Christian manuscripts from Turfan, running headers are virtually non-existent. As in the case of text division, then, we see a distinctive paratextual strategy, to some extent characteristically Manichaean, in use by both the Mediterranean and Central Asian communities.</p>
@@ -673,7 +673,7 @@ skos: http://www.w3.org/2004/02/skos/core#
 
 <figure id="figure09">
 <img src="images/fig09.png" style="max-height: 35em" />
-<figcaption>Fig. 9 M1 (MIK III 203) f. IIr © Staatliche Museen zu Berlin, Museum für Asiatische Kunst / Jürgen Liepe</figcaption>
+<figcaption>Fig. 9. M1 (MIK III 203) f. IIr © Staatliche Museen zu Berlin, Museum für Asiatische Kunst / Jürgen Liepe</figcaption>
 </figure>
 
 <p id="p59">Other fragments show that a larger system of grouping and referencing hymns must also have existed, giving groups of hymns to be used on particular occasions, for example, but grouping them on the basis of melody rather than subject or type. For example, in M759I verso, the caption preceding the first line of the hymn ‘Blessed, blessed (be) Mār Mani, lord commander, beneficent god’ (<i>ʾfryd ʾfryd mrymʾny bg sʾstʾr yzd nywgr</i>) instructs that it be sung ‘in the melody of <i>Mercy on me Messiah</i>’ (<i>ʾmwjd pd mn mšyhʾh nwʾkyy</i>).<sup><a id="footnote-reference-103" class="footnote-reference" href="#footnote-103">103</a></sup> Another fragment, M798b, groups multiple hymns together on the basis of shared melody (<i>ʿyn sẖ pd yq nwʾg</i> ‘These three in a single melody’), and listing the hymn beginnings in one column together with the hymn type in the other column.<sup><a id="footnote-reference-104" class="footnote-reference" href="#footnote-104">104</a></sup></p>
